--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Mon super titre </h1>
+
+<h1>GIT </h1>
+
+<h2>sous titre git</h2>
+
+<img src="vp.png" alt="fleur">
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum excepturi voluptatibus officiis dolor ipsa reprehenderit sint dolore error mollitia autem. Exercitationem blanditiis expedita dignissimos deserunt praesentium quae? Dolores, natus reprehenderit.</p>
     
 </body>
 </html>
