--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <h2>sous titre git</h2>
 
-<img src="vp.png" alt="fleur">
+<img src="vg.png" alt="fleur">
 
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum excepturi voluptatibus officiis dolor ipsa reprehenderit sint dolore error mollitia autem. Exercitationem blanditiis expedita dignissimos deserunt praesentium quae? Dolores, natus reprehenderit.</p>
     
