--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 
 <img src="vg.png" alt="fleur">
 
+<img src="assets/image/vg.png" alt="">
+
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum excepturi voluptatibus officiis dolor ipsa reprehenderit sint dolore error mollitia autem. Exercitationem blanditiis expedita dignissimos deserunt praesentium quae? Dolores, natus reprehenderit.</p>
-    
+   
 </body>
+<footer>
+    <p>footer</p>
+</footer>
 </html>
